tests/ui/several_extends.stderr
error: only one #[extends] attribute is allowed
 --> tests/ui/several_extends.rs:4:5
  |
4 |     #[extends(bar)]
  |     ^^^^^^^^^^^^^^^
