tests/ui/several_extends.rs
#[angstropass::langs]
mod langs {
    #[extends(foo)]
    #[extends(bar)]
    mod baz {}
}

fn main() {}
